[package]
name = "quadrant_gen"
version = "1.3.0"
edition = "2021"
authors = ["John Lusk <john-quadrant_gen@how-hard-can-it-be.com>"]
description = "Generate a Traveller sector map, in character mode"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.4"
